--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -417,6 +417,8 @@ a:hover
 	background-size: 100%
 	background-position: center
 	border-radius: 50%
+.flirtu-logo 
+    min-width: 4vh
 .back-arrow 
 	width: 3vh
 	height: 3vh
