--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -165,6 +165,7 @@ a:hover
     width: 85.321%
 .start-dating__num 
     width: 30px
+    min-width: 30px
     height: 30px
     background: #1ED1F8
     border-radius: 50% 
