--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -290,6 +290,8 @@ a:hover
     height: 121px
     border-radius: 50%
     box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.04), 0px 8px 16px rgba(0, 0, 0, 0.2)
+    overflow: hidden
+    border-radoius: 50%
     img 
         object-fit: cover 
         object-position: center
@@ -300,6 +302,11 @@ a:hover
     right: -22px
     top: 218px
     position: absolute
+    width: 128px 
+    height: 128px 
+    overflow: hidden
+    border-radius: 50%
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.04), 0px 8px 16px rgba(0, 0, 0, 0.2)
     img 
         object-fit: cover 
         object-position: center
